--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,7 +3,7 @@ import { Button } from 'astro-pure/user'
 import PageLayout from '@/layouts/BaseLayout.astro'
 
 const meta = {
-  description: 'Not found',
+  description: '没有找到哦',
   title: '404'
 }
 ---
@@ -11,8 +11,8 @@ const meta = {
 <PageLayout {meta}>
   <div class='px-4 py-10 text-center sm:px-6 lg:px-8'>
     <h1 class='block text-7xl font-bold sm:text-9xl'>404</h1>
-    <p class='mt-3 text-muted-foreground'>Oops, something went wrong.</p>
-    <p class='text-lg'>Sorry, we couldn't find your page.</p>
-    <Button title='Back to home' href='/' variant='ahead' class='mt-5' />
+    <p class='mt-3 text-muted-foreground'>哎呀，出了点问题</p>
+    <p class='text-lg'>抱歉，这个页面好像已经不存在了.</p>
+    <Button title='返回首页' href='/' variant='ahead' class='mt-5' />
   </div>
 </PageLayout>
