--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -4,22 +4,23 @@ import { render, type CollectionEntry } from 'astro:content'
 import { getBlogCollection, sortMDByDate } from 'astro-pure/server'
 import PostLayout from '@/layouts/BlogPost.astro'
 
-export const prerender = true
-
-export async function getStaticPaths() {
-  const posts = sortMDByDate(await getBlogCollection())
-  return posts.map((post) => ({
-    params: { id: post.id },
-    props: { post, posts }
-  }))
-}
+export const prerender = false
 
 type Props = {
   post: CollectionEntry<'blog'>
   posts: CollectionEntry<'blog'>[]
 }
 
-const { post, posts } = Astro.props
+const { id } = Astro.params
+const allPosts = await getBlogCollection()
+const posts = sortMDByDate(
+  allPosts.filter((p) => p.collection === 'blog')
+) as CollectionEntry<'blog'>[]
+const post = posts.find((p) => p.id === id)
+if (!post) {
+  throw new Error(`Blog post not found: ${id}`)
+}
+
 const { Content, headings, remarkPluginFrontmatter } = await render(post)
 ---
 
