--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -29,20 +29,20 @@ interface Props {
 const { page, uniqueTags, collectionsCount } = Astro.props
 
 const meta = {
-  description: 'Some posts or archives of my blog',
-  title: 'Blog'
+  description: '这里收录了我写过的文章和一些归档',
+  title: '博客'
 }
 
 const paginationProps = {
   ...(page.url.prev && {
     prevUrl: {
-      text: `← Previous Posts`,
+      text: `← 上一页`,
       url: page.url.prev
     }
   }),
   ...(page.url.next && {
     nextUrl: {
-      text: `Next Posts →`,
+      text: `下一页 →`,
       url: page.url.next
     }
   })
@@ -53,21 +53,22 @@ const paginationProps = {
   <Button title='Back' href='/' variant='back' />
   <main class='mt-6 lg:mt-10'>
     <div id='content-header' class='animate'>
-      <h1 class='mb-6 mt-6 text-3xl font-medium sm:mt-10'>Blog</h1>
+      <h1 class='mb-6 mt-6 text-3xl font-medium sm:mt-10'>文章</h1>
     </div>
     {
       page.data.length === 0 ? (
-        <p>No posts yet.</p>
+        <p>这里还空着呢，敬请期待我的新内容.</p>
       ) : (
         <div class='grid gap-y-16 sm:grid-cols-[3fr_1fr] sm:gap-x-8'>
           <section aria-label='Blog posts list' class='animate' id='content'>
             {/* header */}
             <div class='mb-3 flex flex-col justify-between text-sm sm:mb-5 sm:flex-row'>
               <span class='text-muted-foreground'>
-                Page {page.currentPage} - Showing {page.data.length} of {collectionsCount} posts
+                第 {page.currentPage} 页，共显示 {page.data.length} 篇，文章总数 {collectionsCount}{' '}
+                篇
               </span>
-              <a aria-label='View all blog by years' href='/archives' data-astro-prefetch>
-                View all posts by years →
+              <a aria-label='按年份查看所有文章' href='/archives' data-astro-prefetch>
+                回顾这些年的文章 →
               </a>
             </div>
             {/* posts */}
@@ -84,7 +85,7 @@ const paginationProps = {
             <aside class='animate' id='sidebar'>
               <h2 class='mb-4 flex items-center text-lg font-medium'>
                 <Icon name='tag-2' class='me-2' />
-                Tags
+                分类
               </h2>
               <ul class='text-bgColor flex flex-wrap gap-2'>
                 {
@@ -97,8 +98,8 @@ const paginationProps = {
                 }
               </ul>
               <span class='mt-4 block sm:text-end'>
-                <a aria-label='View all blog categories' href='/tags' data-astro-prefetch>
-                  View all →
+                <a aria-label='浏览全部分类' href='/tags' data-astro-prefetch>
+                  查看全部 →
                 </a>
               </span>
             </aside>
